--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -30,8 +30,27 @@
 
 这套说辞中最经典的，就是那个“将”字，意即“现在还未达到”。用中共的话来讲，只是“预计2019年中.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 4:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777757.md#1" target="_blank">张菁：大陆离婚率高启 半边天思想是根源</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777757.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20190130-Chi-Jin-Family-Lawyers-3-01-150x120.jpg" align ="left"></a>只有找回道德，走回传统，相信“姻缘天定”，破除“人定胜天、女人顶半边天”的荒谬思想，才能从传统文化中寻回丢失的自我，重建一个新的和谐世界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 3:51 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760806.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（3）</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760806.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/06/1011021948282054_1-150x120.jpg" align ="left"></a>刘仁，1927年即加入中共，曾在内蒙古、张家口、北平等地从事秘密工作。1935年被派往苏联受训，回国后是北京地下党的主要负责人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 2:33 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11776387.md#1" target="_blank">陈思敏：中共造牛市 脑筋动到居民储蓄</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11776387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/04/140327101310100615-150x120.jpg" align ="left"></a>中共银保监会在1月4日发布了今年首份文件《关于推进银行业和保险业高品质发展的指导意见》，明确指出要“促进居民储蓄有效转化为资本市场长期资金”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 4:46 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783874.md#1" target="_blank">海网：“空心朽”演“核心秀”</a><br></h3>喊罢政治局看齐，
+再查常委会足迹。
+一尊惟一尊呼吁，
+核心被空心疏离。
+中国共产党亡石①，
+伴有古枫演哑剧②。
+哑剧今上中南海，
+红朝就剩一张皮。
+三退已近三亿半，
+未退好人莫再迷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:49 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783719.md#1" target="_blank">陈达：天灭中共还剩几步棋？</a><br></h3>正邪大战激，地球村分离。大陆红山寨，美国世警局。
+
+世警每集结，往往遭伏击。萨达姆捣乱，拉登飞机袭。
+
+卡扎菲扯腿，塔利班猫腻。伊斯兰建国，伊朗朝核器。
+
+大战临末尾，天帚扫垃圾。川普新警长，干扰排而避。
+
+对手定中共，布阵亚太区。伊斯兰国灭，巴格达迪毙。
+
+揪住金三耳，中朝双簧息。阻伊朗挑衅，炸苏.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11781626.md#1" target="_blank">石铭：中共迫害无辜老人 丧尽天良</a><br></h3>中共在迫害法轮功上没有任何法律依据和道德底线，特别是对老年法轮功学员的迫害更是如此，可谓灭绝人性、丧尽天良。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780962.md#1" target="_blank">李小刚：脑控原理之DNA共振</a><br></h3>目前所说的脑控武器其实早已诞生，并且一直在使用和不断的完善，要了解脑控的原理，就必须提到共振，因为脑控原理中包括了大脑共振和DNA共振。本文将主要对于DNA共振作以分析和探究。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 8:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11780866.md#1" target="_blank">李清：习近平的唯一出路是解体中共</a><br></h3>宗教和预言对人类极为重要。有关人类最重要的事情在宗教和预言中都讲了。这里只提及诸葛亮的《马前课》。《马前课》共有十四课，每一课代表一个朝代，预言了中国的历史，其准确度惊人。
