--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -27,9 +27,6 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784637.md#1" target="_blank">任世豪：中共法律丑闻又一桩</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784637.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020-1-8-mh-persecution-arrest-2019-3-600x400-1-150x120.png" align ="left"></a>在中共迫害法轮功长达二十年之后的今天，它仍不遗余力地对无辜民众加剧迫害，一再制造冤假错案......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 3:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783930.md#1" target="_blank">袁斌：没人信的藏民安全满意度与江苏脱贫率</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/309034826938-150x120.jpg" align ="left"></a>最近大陆党媒报导的两个数字很吸引眼球，引发了媒体的关注和网民的热议——一个是西藏民众安全满意度达99.7％，另一个是江苏省脱贫率超过99.99%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 3:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783651.md#1" target="_blank">【名家专栏】川普的全国讲话恰如其分</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1192550658-webcrop-1200x720-150x120.jpg" align ="left"></a>美国总统唐纳德?川普（特朗普）总统针对伊朗的报复性打击向全国发表的讲话包含了强硬、严肃、同情和希望，以及它们之间的完美平衡。尽管如此，国会中的民主党人还是立即批评了总统的决定和随后的评论。他们这样做并不是因为总统做了什么不恰当的事情，而是因为，再一次令他们感到沮丧的是，总统的决定是正确的，该决定对整个国家来讲是最好的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 12:13 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788867.md#1" target="_blank">陆客：致习近平的一封信</a><br></h3>习近平先生：
-
- 您好。我是一位中国公民，请允许我以平等的身份与您进行一些交流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:16 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788618.md#1" target="_blank">吐为快：贺中华民国之民主光大</a><br></h3>阋墙御侮抗匪渗，忭舞自由致尧舜；
 海内属望树矜式，陆民深热羡荣尊；
 安黎衽席非一隅，光复禹域是重任；
@@ -63,5 +60,15 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785398.md#1" target="_blank">项云：老百姓看“打黑除恶”</a><br></h3>不管中共宣扬和实施“打黑除恶”什么意义，老百姓却完全不看好。听了三个百姓对“打黑除恶”看法，有的挺新颖。整理了一下他们看法叙述如下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:04 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785344.md#1" target="_blank">文静：“舆情引导”员把自己引向了险境</a><br></h3>共产党就是用各种手段维护他的统治，而它的这些手段都是把好人变成坏人。而坏人是没正义、没气节的，只要许以利益或恐吓，什么事都会去干，这样的人最便于中共的统治。希望你们每个人不要被它引诱成为坏人，帮其行恶，最后也成了罪人，把自己引向了危险的境地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 9:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783854.md#1" target="_blank">王赫：中共政局——三病缠身 死前丧智</a><br></h3>2019，中共是火上烤的一年，被烤得神志不清、惊慌失措、奄奄一息，政局全面恶化：草木皆兵，“向左转”浊浪拍岸，社会控制极端化；当局左支右绌，进退失措，几近丧失决策能力；强化“党领导一切”，刀光剑影之间，内斗呈现新态势，已末路不远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 11:01 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783874.md#1" target="_blank">海网：“空心朽”演“核心秀”</a><br></h3>喊罢政治局看齐，
+再查常委会足迹。
+一尊惟一尊呼吁，
+核心被空心疏离。
+中国共产党亡石①，
+伴有古枫演哑剧②。
+哑剧今上中南海，
+红朝就剩一张皮。
+三退已近三亿半，
+未退好人莫再迷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:49 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdqyi2905/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
