--- a/gb/ncid278_2.md
+++ b/gb/ncid278_2.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11762641.md#1" target="_blank">法轮功学员杨胜军被迫害致死 律师举报控告</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11762641.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11-1-150x120.jpg" align ="left"></a>2019年12月26日，佳木斯法轮功学员杨胜军的辩护律师谢燕益向佳木斯市监察委员会提交了“紧急报案举报控告专函”，控告佳木斯市公安局等部门非法拘禁和致死杨胜军的违法行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 1:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/17/n11728852.md#1" target="_blank">【思想领袖】专访邵岚：需反共捍卫价值观</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/17/n11728852.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191210-Yichun-American-Thought-Leaders-Joey-Siu-150x120.jpg" align ="left"></a>我们永远不能低估，中国共产党为了维护面子、控制整个国家，从而压制各种民主运动的决心。我一直认为，他们非常害怕人权保护自由民主，甚至革命等思想，害怕这些传入中国。因为这肯定会引起震动，中共非常非常担忧，因为这肯定会导致中国大陆发生大规模抗议和示威活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 4:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760936.md#1" target="_blank">大陆民众新年感谢法轮功 问候李大师</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760936.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e5dc334d71e3c7_ttl7daylZx_2019-12-29-1912060916544773-150x120.jpg" align ="left"></a>2020新年之际，明白法轮功真相及亲身受益的大陆各界民众，通过大纪元、明慧网等各种途径向法轮功团体及法轮功创始人李洪志大师表示感谢，并问候新年好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11761505.md#1" target="_blank">【拍案惊奇】元旦百万游行被腰斩 港警用航拍机</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11761505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e5f247f8707d13_ttl7dayRGj_tn0101-11-150x120.jpg" align ="left"></a>香港的民阵元旦大游行已经结束。因为爆发冲突，元旦的大游行被香港警方中途叫停，但是民阵也录得超过103万人上街的数字，如果不被叫停，相信数字会更多，就算现在的也是超过了6月9日的人数。警方的数字是在维园出发和等候的人加起来一共是6万多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/7/n11774971.md#1" target="_blank">四川八名法轮功学员遭冤判 法院欺瞒家人</a><br></h3>2019年10月29日，四川绵竹市八名法轮功学员被非法庭审，四位律师依法为他们做了无罪辩护。12月31日，安州区法院偷偷提前庭审、宣判，欺瞒律师和法轮功学员家属，对八人非法判刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 7:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/22/n11738876.md#1" target="_blank">被打残 辽宁法轮功学员李亚君再遭迫害</a><br></h3>10年前在拘留所被打残的凌源法轮功学员李亚君于2019年7月5日，被凌源市国保警察连抬带拽塞进轿车，送到朝阳市看守所，被拒收。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 10:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11765978.md#1" target="_blank">北京法轮功学员 认证专家侯俊文遭迫害离世</a><br></h3>北京法轮功学员侯俊文2017年被非法判刑2年，于2019年1月29日在北京含冤去世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11763905.md#1" target="_blank">遭拘15日 中国劳工维权者陈伟祥等3人获释</a><br></h3>2019年底在广州被捕的中国劳工行动研究者陈伟祥（祥子）等3人，在遭行政拘留约半个月后，于今天上午获释，并随亲友返家。陈伟祥今晚在脸书（Facebook）报平安，感谢外界声援。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:10 AM							</td></tr>
