--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784686.md#1" target="_blank">海风：中共到底还能撑多久？</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784686.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010409191501-150x120.jpg" align ="left"></a>中共还能撑多久？这已成了国内外最热门的话题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 6:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784590.md#1" target="_blank">【名家专栏】不要质疑美军官兵服役的意愿</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784590.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-475256239-webcrop-1200x720-150x120.jpg" align ="left"></a>在过去的几天里，关于美国在世界上的角色的讨论中有着很多说法。随着那些应该对整个中东地区的谋杀负有责任的恐怖分子不断被消灭，一些人却开始宣称我们正处于第三次世界大战的悬崖边上。而且，不言而喻，如果另一场世界大战即将爆发，那么征兵也即将来临。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 4:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784637.md#1" target="_blank">任世豪：中共法律丑闻又一桩</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11784637.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020-1-8-mh-persecution-arrest-2019-3-600x400-1-150x120.png" align ="left"></a>在中共迫害法轮功长达二十年之后的今天，它仍不遗余力地对无辜民众加剧迫害，一再制造冤假错案......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 3:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783930.md#1" target="_blank">袁斌：没人信的藏民安全满意度与江苏脱贫率</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11783930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/309034826938-150x120.jpg" align ="left"></a>最近大陆党媒报导的两个数字很吸引眼球，引发了媒体的关注和网民的热议——一个是西藏民众安全满意度达99.7％，另一个是江苏省脱贫率超过99.99%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 3:31 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789473.md#1" target="_blank">李铭：泛滥的酷刑迫害</a><br></h3>明慧网近日报导，法轮功学员陈淑英、周亚芳，目前在辽宁女子监狱遭受非人迫害。陈淑英的手脚被铐在床杆上，不给铺床垫，不给被盖，甚至大小便都不给解铐；周亚芳在寒冷的冬天就只能穿一件单衣、单裤，脚穿一双板鞋，没穿袜子，每天都被“包夹犯人”折磨的痛苦不堪。陈淑英、周亚芳的遭遇，印证了历经漫漫二十年，中共的迫害政策仍继续执行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 1:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788914.md#1" target="_blank">苦胆：一张选票的距离</a><br></h3>
 
 有识之士掷出货真价实的金句：
