--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -60,7 +60,7 @@
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11795723.md#1">新影片显示：伊朗射二枚导弹击落乌航客机</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11795725.md#1">青海城投爆8.5亿美元债违约危机 标普降级</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11795838.md#1">大陆4公司巨亏60亿 17万股民恐血本无归</a><br>
-<a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11795797.md#1">涉中共间谍活动 德国警方突击搜查三人</a><br>
+<a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11795797.md#1">涉中共间谍活动 三德国人遭警方突击搜查</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793247.md#1">山东招远610副主任宋少昌被举报到海外</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11795612.md#1">姆钦：哪怕只有第一阶段协议 贸易战也值</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11795370.md#1">持枪及受贿近七千万 甘肃博士副市长受审</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/qdbzyr225/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,902,568 人
+- 共 349,904,395 人
 ```
 </strong>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
