--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/9/n11778504.md#1" target="_blank">【拍案惊奇】危机未完全解除 美伊冲突内幕</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/9/n11778504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Baghdad_-_airport_and_green_zone-1-150x120.jpg" align ="left"></a>一场迫在眉睫的战争，随时可能爆发。这种危机感一直持续到今天中午，美国总统川普，向全国发表讲话，才算结束。现在，世界避免了一场美伊战争，但是围绕这次战争危机，还有很多细节，目前越来越多的相关消息出来，我们下面一一来了解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 4:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/9/n11779091.md#1" target="_blank">北大医学部教授：武汉肺炎人传人可能性大</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/9/n11779091.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg" align ="left"></a>据大陆专家初步判定，武汉的不明原因肺炎为新型冠状病毒。北京大学医学部基础医学院免疫学系教授王月丹认为，这次疫情人传人的可能性很大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 4:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/8/n11777700.md#1" target="_blank">印尼向争议海域派遣战机巡航 北京低调</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/8/n11777700.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-594329966-150x120.jpg" align ="left"></a>在印尼与中国的南海领土争端不断升级之际，印尼空军7日向南中国海派遣4架战机，在印尼北部有争议的纳土纳群岛巡航。印尼总统佐科·维多多也于8日赶赴纳土纳群岛海域的一个岛屿视察，再次强调纳土纳群岛及其海域是印尼的领土，主权问题不容谈判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 1:13 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/9/n11778497.md#1" target="_blank">汕头怀孕母牛三步一跪求生 网友买下放生</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/9/n11778497.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/08-150x120.jpg" align ="left"></a>近日，有一段视频在大陆网络热传。视频显示，事发在广东汕头潮阳谷饶邻镇，一头怀孕母牛在被拉到屠宰场的过程中，疑似三步一跪向人哀求饶它一命。目前，该母牛被网民筹集资金救下来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 12:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/13/n11789754.md#1" target="_blank">听信偏方 江苏男生吞活黄鳝被送进ICU</a><br></h3>1月9日，江苏省中医院手术室内，当两条长50厘米、粗3厘米的大黄鳝从一名51岁的男性患者结肠里被取出时，众人一片惊叹。原来，该男子听信了生吞黄鳝能治疗便秘的偏方，生吞下两条活黄鳝，最终导致肠道穿孔。目前，该男子仍在重症监护室继续治疗，仍未脱离生命危险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 2:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/13/n11789322.md#1" target="_blank">每日三退声明精选（2020/01/12）</a><br></h3>共产党贪腐邪恶，占尽了百姓的所有，还经常生事栽赃陷害无孤善良的民众，小时候被其所骗加入了中国共青团组织。特声明退出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/13/n11789372.md#1" target="_blank">每日三退声明精选（2020/01/11）</a><br></h3>本人是来自北京的赵祁疆。在中学时代，因为受到了中共邪党的蛊惑，我成为了加入邪党先锋队青年团的积极分子。中学期间，我的母亲曾经因为记录中共对退伍军人杀鸡取卵，兔死狗烹的残暴行为而被中共官员截查并强制删除手机内容。在移民加拿大以后，我了解了中共邪党欺人瞒世、草芥人命的邪恶行径。在大学攻读经济学和社会学期间，通过教授的谆谆善诱和不懈帮助，我终于了解了中共邪党的本质.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/10/n11783219.md#1" target="_blank">13年从未放弃 电影《亲爱的》原型仍在寻子</a><br></h3>2007年10月9日，是包子铺小老板孙海洋到深圳城中村卖包子的第七天。这一天，他5岁的儿子孙卓，在他太累打个盹时被拐走。如今，13年过去，虽然他的真实故事被改编成电影《亲爱的》，但幸运之神尚未敲响他的家门，他仍在艰难寻子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 7:54 AM							</td></tr>
