--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -13,7 +13,6 @@
 
 年号是中国古代用来纪年所起的一种名号。汉献帝一共六个年号.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793154.md#1" target="_blank">思辨式写作：科技冷漠（上）</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793154.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_209874568_Subscription_L-150x120.jpg" align ="left"></a>我们将一起探讨网路时代下的冷漠与犯罪，训练判读表格的能力，并学习打磨立意高度、理解深化论述的方法，借此提高论述品质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:48 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793243.md#1" target="_blank">2020美大选川普能否连任和圣经中的川普</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793243.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1195147904-150x120.jpg" align ="left"></a>就在上周六，台湾2020年总统选举落下帷幕，就在一年前看起来还不可能实现的蔡英文连任，以台湾选举史上最高票数完胜，给了对岸一个清脆的大耳光，对还在香港反送中运动中苦苦鏖战的港人的信心也是强有力的支持。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:33 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/8/n11777580.md#1" target="_blank">清朝人果报见闻：天网恢恢 疏而不漏</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/8/n11777580.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/432127144-e1574145808226-150x120.jpg" align ="left"></a>这世上到底有没有因果报应，古往今来许多故事都给予了肯定的答案，只是对于一些人，特别是受现代无神论影响以及信奉眼见为实的人而言，因为没有发生在自己身上，所以依旧拒绝相信。不过，这部分人中应该有一些看过曾在大陆流行的关于清代大文人纪晓岚的电视剧，而这位大文人不仅在年幼之时可以看到另外空间，而且在长大后还写了一本书《阅微草堂.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 12:27 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11792313.md#1" target="_blank">【馨香雅句】人心惟危 道心惟微</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11792313.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/d601abd4f23a768a923005dfa5e657f6-150x120.jpg" align ="left"></a>中国的文化根源于佛家、道家和儒家。像我们的先祖黄帝，他曾问道于广成子，最终得道，道家文化讲说真话办真事，最终返本归真…......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793079.md#1" target="_blank">【看川普推特学英文】保卫美国人 川普下令击毙伊朗军头</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1198272311-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="President Trump Addresses The Nation After Iranian Attacks In Iraq Target Bases Where U.S. Troops Stationed WASHINGTON, DC - JANUARY 08: With a portrait of former U.S. President George W. Bush hanging in the Grand Foyer (R), President Donald Trump speaks from the White House January 08, 2020 in Washington, DC. During his remarks Trump addressed the Iranian missile attacks that took place last night in Iraq. (Photo by Chip Somodevilla/Getty Images)" align ="left"></a>美国总统川普因为下令击杀伊朗高阶将领，同时也是头号恐怖份子领袖苏雷曼尼（Qassem Soleimani），造成近日美伊两国的情势一度紧张。美国防部发出声明，为确保美国人民与美国安全，甚至全球利益，美国须采取必要行动！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:29 PM			</td></tr>
@@ -26,6 +25,7 @@
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/13/n11790521.md#1" target="_blank">许其正：海鸥三唱</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/13/n11790521.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/01/1301072206451758-150x120.jpg" align ="left"></a>海鸥，飞翔，在穹苍，在海的上方。  看！它和群鸥一样，平举着双翅，以一个极优美的姿势，在滑翔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/13/n11790815.md#1" target="_blank">青松絮语：大房子</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/13/n11790815.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/green-house-pixabay-150x120.jpg" align ="left"></a>在一个人人都在追逐大房子、更大房子的时代，房子到底多大才够住，成了一个我们人人都该沉下心反思的哲学问题……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/8/n11775923.md#1" target="_blank">织布师智斗狂妄无知的国王</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/8/n11775923.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1d014ccbd8222a11b76e8c981203b473-150x120.jpg" align ="left"></a>有个狂妄无知的国王，老是不满足，特别是对自己穿的衣裳很在意，下令所有技艺超群的织工，来为他赶织纤细美丽的新布作衣裳。一个聪明的老织工怎样得到挑剔的国王的赞赏呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 5:47 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/11/n11784288.md#1" target="_blank">香港，可饮一杯无？</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/11/n11784288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_118310902-150x120.jpg" align ="left"></a>异地相聚的我们不再年轻，昔时的意气风发，如今的沉静沧桑，现在遇到我的人，恐怕不曾想过我也曾经年轻，就像断开了的七彩拐杖糖，拿到红色那一截的以为是樱桃口味，黄色那一截的以为是柠檬口味，却不知道糖在不同的段落有不同的味道，而我的年轻岁月留在了台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11795975.md#1" target="_blank">童诗：坐高铁真有趣</a><br></h3>高铁窗外的风光
 有白鹭鸶在田里翘脚
 有稻田在快乐歌唱
