--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br>
 <br><p><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/16/n11797542.md#1">东方觉：都是茅台惹的“祸” 醉倒贪官何其多</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/16/n11797472.md#1">向真：恶徒莫侥幸 报应不迟到</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11796487.md#1">吴惠林：共产末日预言</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11796087.md#1">洪微：美军公开特战部署应对中共</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/15/n11793807.md#1">方能达：祝贺《大纪元时报》读者日增</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793721.md#1">夏林：美丽与坚韧</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793432.md#1">周晓辉：班农证川普弃绥靖政策 中共去日无多</a><br>
-<a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/14/n11793496.md#1">王友群：台湾大选 中共完败 习近平咋办</a><br>
 <br><p><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/qdbzyr225/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
